--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vite Wasm-Pack App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <canvas id="gol-canvas"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
