--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite Wasm-Pack App</title>
-    <script type="module" crossorigin src="/assets/index.61b40edd.js"></script>
-    <link rel="stylesheet" href="/assets/index.2f0b6c13.css">
+    <script type="module" crossorigin src="/wasm-gol/assets/index.61b40edd.js"></script>
+    <link rel="stylesheet" href="/wasm-gol/assets/index.2f0b6c13.css">
   </head>
   <body>
     <canvas id="gol-canvas"></canvas>
