feat: Added state reset functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="controls-game">
       <button id="toggle" class="btn btn-controls">Play</button>
       <button id="step" class="btn btn-controls">Step</button>
-      <button id="clear" class="btn btn-controls">Clear</button>
+      <button id="reset" class="btn btn-controls">Reset</button>
       <button id="random" class="btn btn-controls">Randomize</button>
     </div>
     <div class="controls-size">
