deploy: d8df94ecac08e5939d11c633450bd67e9e345c91

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wasm Game-Of-Life</title>
-    <script type="module" crossorigin src="/wasm-gol/assets/index.f576de4d.js"></script>
+    <script type="module" crossorigin src="/wasm-gol/assets/index.8722e1cf.js"></script>
     <link rel="stylesheet" href="/wasm-gol/assets/index.6312a372.css">
   </head>
 
@@ -12,7 +12,7 @@
     <div class="controls-game">
       <button id="toggle" class="btn btn-controls">Play</button>
       <button id="step" class="btn btn-controls">Step</button>
-      <button id="clear" class="btn btn-controls">Clear</button>
+      <button id="reset" class="btn btn-controls">Reset</button>
       <button id="random" class="btn btn-controls">Randomize</button>
     </div>
     <div class="controls-size">
